# Rsubbotools

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure.ac
DOCKERFILE/: .env  Dockerfile-details  docker-compose.yml  start_container
DOCKERFILE/working_container/: Dockerfile
R/: RcppExports.R  Rsubbotools-package.R  utils.R
man/: Rsubbotools-package.Rd  alaplafit.Rd  dalaplace.Rd  dasubbo.Rd  dlaplace.Rd  dpower.Rd  dsep.Rd  dsubbo.Rd  laplafit.Rd  palaplace.Rd  pasubbo.Rd  plaplace.Rd  ppower.Rd  psep.Rd  psubbo.Rd  qalaplace.Rd  qasubbo.Rd  qlaplace.Rd  qpower.Rd  qsep.Rd  qsubbo.Rd  ralaplace.Rd  rasubbo.Rd  rasubbo_orig.Rd  rgamma.Rd  rgamma_c.Rd  rlaplace.Rd  rpower.Rd  rsubbo.Rd  sepfit.Rd  subboafish.Rd  subboafit.Rd  subbofish.Rd  subbofit.Rd  subbolafit.Rd
src/: Makevars  Makevars.win  RNG.cpp  RcppExports.cpp  alaplafit.cpp  cdf.cpp  cdf.h  common.cpp  common.h  density.cpp  laplafit.cpp  multimin.cpp  multimin.h  quantile.cpp  sepfit.cpp  structs.h  subboafish.cpp  subboafit.cpp  subbofish.cpp  subbofit.cpp  subbolafit.cpp
tests/: test-utils.R  testthat.R
tests/testthat/: helper_functions.R  test-RNG.R  test-alaplafit.R  test-cdf.R  test-covar.R  test-density.R  test-functions.R  test-laplafit.R  test-quantile.R  test-sepfit.R  test-subboafit.R  test-subbofit.R  test-subbolafit.R  test-utils.R
